# aws-pipeline-project

./: .env.example  README.md  pyproject.toml
api/: Dockerfile  requirements.txt  task-definition.json
api/app/: core.py  main.py  utils.py
scripts/: build_push_ecr.sh
terraform/: ecs.tf  locals.tf  networking.tf  outputs.tf  s3.tf
